live-stream/stream searchbar added

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,3 +7,26 @@ body {
   color: #fff;
   font-family: "Poppins", sans-serif;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #000;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
