--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@
 body {
   background-color: #1a1932;
   color: #fff;
-  font-family: "Poppins", sans-serif; 
+  font-family: "Poppins", sans-serif;
 }
 
 /* width */
@@ -29,4 +29,9 @@ body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+.child {
+  /* Apply Tailwind CSS utility classes using @apply */
+  @apply max-lg:w-[100px] max-lg:h-[130px] max-lg:p-[7px] max-lg:text-[13px] lg:w-[150px] lg:h-[185px] border-[1px] p-[10px] rounded-md flex items-center justify-between flex-col;
 }
